# cairo-5c

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  button.5c  cairo-5c.3.in  cairo-5c.h  cairo.5c  cairo.c  chrome.5c  configure.ac  configure.in  draw.c  event.c  gstate.c  gtk.c  init.c  matrix.c  pattern.c  setgame.5c  surface.c  test.5c  text.c  toggle.5c
chrome/: Makefile.am  box.5c  chrome-box.5c  chrome-button.5c  chrome-label.5c  chrome-lozenge.5c  chrome-scrollbar.5c  chrome.5c  scroll-test.5c  toggle.5c
debian/: .gitignore  cairo-5c.install  changelog  control  copyright  gbp.conf  libcairo-5c-dev.install  libcairo-5c0.install  libcairo-5c0.symbols  rules
debian/tests/: control  upstream
examples/: .gitignore  Makefile.am  animate.5c  arc.5c  cairo.5c  chrome-example.5c  connect-3.5c  draw.5c  events.5c  fob-logo.5c  fob.5c  graph.5c  grid.5c  led.5c  metrics.5c  pie-new.5c  pie.5c  rottext.5c  setgame.5c  sin.5c  spin-cairo.5c  spin.5c  spinman.5c  test.5c  text45.5c  tic-tac-toe.5c
nichrome/: Makefile.am  box-test.5c  nichrome-border.5c  nichrome-box.5c  nichrome-button.5c  nichrome-label.5c  nichrome-lozenge.5c  nichrome-scrollbar.5c  nichrome-solid.5c  nichrome-text.5c  nichrome-textline.5c  nichrome-toggle.5c  nichrome.5c  scroll-test.5c
src/: Makefile.am  cairo-5c.h  cairo.c  draw.c  event.c  gtk.c  init.c  matrix.c  pattern.c  rsvg.c  surface.c  text.c  xlib.c
test/: .gitignore  Makefile.am  nichrometest.5c  test.5c
