NICKLEFILES=\
	animate.5c \
	arc.5c \
	chrome-example.5c \
	draw.5c \
	events.5c \
	fob.5c \
	graph.5c \
	grid.5c \
	led.5c \
	metrics.5c \
	pie.5c \
	pie-new.5c \
	rottext.5c \
	setgame.5c \
	sin.5c \
	spin.5c \
	spin-cairo.5c \
	spinman.5c \
	test.5c \
	text45.5c \
	tic-tac-toe.5c

exampledir=$(pkgdatadir)/examples

example_DATA=$(NICKLEFILES)

EXTRA_DIST=$(NICKLEFILES)
